# bars_py

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  bars.py  bars_converter.py  bcf_converter.py  pyproject.toml  test_create.py  utils.py
cmake/: blobify-CMakeLists.txt.in
include/bars/: amta.h  bars.h  common.h  fstm.h  fstp.h  fwav.h
src/: amta.cpp  bars.cpp  bars_.py  common.cpp  create.py  fstm.cpp  fstp.cpp  fwav.cpp  util.h  utils.py
src/helpers/: read_bars_header.py
tests/: CMakeLists.txt
tests/src/: main.cpp
