[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bars_py"
version = "0.0.1"
description = "Python module for nead's bars format"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["nead", "bars"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
]
